# watermonitor_ema

./: .gitignore  .gitmodules  README.md  certupload.py
firmware/: CMakeLists.txt
firmware/Config/: FreeRTOSConfig.h  logging_stack.h
firmware/cmake/: ArduinoBase.cmake  Toolchain.cmake
firmware/contrib/: CMakeLists.txt
firmware/contrib/FreeRTOS/Source/: lp.c
firmware/src/: CMakeLists.txt  watermonitor.c
firmware/src/comm/: CMakeLists.txt  comm.h
firmware/src/comm/lora/: CMakeLists.txt  lora.c
firmware/src/comm/lora/hal/: hal.c  lora_eic.c  lora_eic.h  lora_spi.c  lora_spi.h
firmware/src/comm/nb-iot/: CMakeLists.txt  arduino_func.c  cellular_config.h  cellular_platform.c  cellular_platform.h  nbiot-socket.c  nbiot-socket.h  nbiot-uart.c  nbiot-uart.h  nbiot.c
firmware/src/hal/: Arduino.c  Arduino.h  CMakeLists.txt  definitions.h  power.c  power.h
firmware/src/json/: CMakeLists.txt  json.c  json.h
firmware/src/sensor/: CMakeLists.txt
firmware/src/sensor/include/: CMakeLists.txt  sensor.h  sensor_calibrate.h  sensor_convert.h  sensor_definitions.h  sensor_types.h
firmware/src/sensor/include/c_old/: sensor_ec.h  sensor_ph.h  sensor_pin_config.h  sensor_tds.h  sensor_turb.h
firmware/src/sensor/include/cpp_old/: BuoyDevice.hpp  DfrobotTurbiditySensor.hpp  EC_Sensor.hpp  Gravity.hpp  PH_Sensor.hpp  Sensor.hpp  SensorCollection.hpp  TDS_Sensor.hpp  TestSensor.hpp  sensor_water_pressure.h  water_Pressure.hpp
firmware/src/sensor/src/: CMakeLists.txt  sensor.c  sensor_calibrate.c  sensor_convert.c
firmware/src/sensor/src/c_old/: sensor_ec.c  sensor_ph.c  sensor_tds.c  sensor_turb.c  sensor_water_pressure.c
firmware/src/sensor/src/cpp_old/: BuoyDevice.cpp  DfrobotTurbiditySensor.cpp  EC_Sensor.cpp  Gravity.cpp  PH_Sensor.cpp  Sensor.cpp  SensorCollection.cpp  TDS_Sensor.cpp  TestSensor.cpp  water_Pressure.cpp
firmware/startup/: CMakeLists.txt  board_definitions.h  board_init.c  board_startup.c
prototypes/AT_Tester/: AT_Tester.ino
prototypes/lowPowerTest/: lowPowerTest.ino
