add_subdirectory(nb-iot)
add_subdirectory(lora)

if(CAPSTONE_BUILD_LORA)
	set(COMM_SOURCE ${SRCS}
		${LORA_SRCS}
		PARENT_SCOPE)
	set(COMM_INCLUDE ${INCLUDES}
		${LORA_INCLUDES}
		${CMAKE_CURRENT_SOURCE_DIR}
		PARENT_SCOPE)
else()
	set(COMM_SOURCE ${SRCS}
		${NBIOT_SRCS}
		PARENT_SCOPE)
	set(COMM_INCLUDE ${INCLUDES}
		${NBIOT_INCLUDES}
		${CMAKE_CURRENT_SOURCE_DIR}
		PARENT_SCOPE)
endif()